auxiliary/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name:  spinnaker

---
apiVersion: v1
kind: Namespace
metadata:
  name:  prometheus
